# T2024

./: CMakeLists.txt  CMakePresets.json  DB_Diagram1.drawio  README.md  Untitled Diagram.drawio  class_Diagram1.drawio  main.c  org_Diagram_1.drawio  petri1.drawio  process.c  s1.drawio  target.c
